@@ -224,6 +224,9 @@
         if (window.location.protocol === 'file:') {
             krexx.disableForms();
         }
+
+        // Move the output into the viewport. Debugging onepager is so annoying, otherwise.
+        kdt.moveToViewport('.kouterwrapper');
     };
 
     /**
