@@ -4,6 +4,7 @@
 - Added property comments to the analysis
 - Added property declaration place to the analysis.
 - Added better unicode support for the HTML output.
+- Added better support for debugging onepagers.
 - Change: Several performance tweaks for runtime optimization.
 - Change: Fallback setting runtime => level set to 5.
 - Change: Fallback setting runtime => maxCall set to 10.
